--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'org.springframework.boot' version '3.0.6'
     id 'io.spring.dependency-management' version '1.1.0'
 }
-
 group = 'com.vouched'
 version = '1.0.0'
 sourceCompatibility = '17'
@@ -27,8 +26,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
-
-    implementation 'com.mailjet:mailjet-client:5.2.3'
+    implementation "com.sendinblue:sib-api-v3-sdk:7.0.0"
+    implementation 'com.bucket4j:bucket4j-core:8.7.1'
+    implementation 'org.freemarker:freemarker:2.3.32'
 
     // flyway
     implementation 'org.flywaydb:flyway-core'
@@ -55,17 +55,12 @@ dependencies {
     // rosetta row mapper
     implementation 'com.hubspot.rosetta:RosettaJdbi3:3.11.10'
 
-
     // Sql object
     implementation 'org.jdbi:jdbi3-sqlobject:3.37.1'
 
-    // Google Sheets API
-//    implementation 'com.google.api-client:google-api-client:1.32.1'
-//    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
-//    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
-    // https://mvnrepository.com/artifact/com.google.http-client/google-http-client-jackson
-
-
+    // clerk
+    implementation 'io.github.zzhorizonzz:clerk-java-sdk:0.0.18'
+    implementation 'com.microsoft.kiota:microsoft-kiota-http-okHttp:0.9.0'
 
 
     compileOnly 'org.projectlombok:lombok'
